# dot

./: .gitignore  AGENTS.md  Brewfile  CLAUDE.md  LICENSE  README.md  install.py  install_tools.py  justfile  platforms.py  prek.toml  pyproject.toml  symlink.py  tools.py  ui.py  update_shas.py
.agents/skills/add-tool/: SKILL.md
.agents/skills/update-nvim-from-minimax/: SKILL.md
.claude/: settings.json
.claude/skills/update-nvim-from-minimax/: SKILL.md
.claude/skills/update-nvim-plugins/: SKILL.md
.claude/skills/update-tools/: SKILL.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/command/: prek.md
bat/: config
bat/themes/: Everforest-Dark-Hard.tmTheme  Rose-Pine.tmTheme
docs/agents/: backlog.md
fish/: config.fish
fish/.config/fish/: config.fish
fish/conf.d/: ssh.fish
fish/fish/: config.fish  fish_variables
fish/functions/: copilot.fish  gd.fish  zmx-select.fish
fish/themes/: Everforest Dark Hard.theme
ghostty/: config
ghostty/.config/ghostty/: config
ghostty/ghostty/: config
git/: shared
lazygit/lazygit/: config.yml
nvim/: AGENTS.md  CLAUDE.md  nvim-pack-lock.json
nvim/.config/nvim/: lazy-lock.json
nvim/MiniMax-backup/: init.lua
nvim/nvim/: lazy-lock.json  lazyvim.json
nvim/nvim/lua/: keymaps.lua  lazy-bootstrap.lua  lazy-plugins.lua  options.lua
nvim/plugin/: 40_plugins.lua
shpool/shpool/: config.toml
ssh/: config
ssh/.ssh/: config
starship/: starship.toml
starship/.config/: starship.toml
tests/: test_install.py  test_symlink.py  test_update_shas.py
zed/zed/: settings.json
(+49 files in other folders)
