[project]
name = "dot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15",
    "ty>=0.0.30",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T20", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "INP001", "PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
